<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"S. V. C. Binghamton"</string>
    <string name="action_settings">Settings</string>
    <string name="home">"Home"</string>
    <string name="about">"About"</string>
    <string name="events">"Events"</string>
    <string name="register">"Sign Up"</string>
    <string name="title_activity_display_about_message">DisplayAboutMessageActivity</string>
    <string name="about_message">"About"</string>
    <string name="mission_statement">"   
Mission Statement"</string>
    <string name="mission_statement_msg">"
The mission of Student Volunteer Center is to provide extensive volunteer resources to Binghamton University students. We provide opportunities for community service, involvement in local/campus volunteer events, organization information, and volunteer guidance. In doing so, it is our hope that we may foster a sense of community among our club members, event participants, the student body, and the Binghamton community at large.
"</string>
    <string name="membership">"
Membership"</string>
    <string name="membership_msg">""
To be recognized as an official or active member of SVC, you must complete at least 10 hours of service through SVC each semester. Active membership entitles you to voting privileges, the ability to run for a position on the SVC Executive Board, and the opportunity to plan your own volunteer events and/or service projects. If you are a general body member who is interested in planning an event or organizing a project with the support of others, please contact the SVC Eboad at svc@binghamtonsa.org, or attend one of our Sunday Eboard meetings at 7:00pm in UU103.
"</string>
    <string name="volunteer_hours">"
Volunteer Hours"</string>
    <string name="volunteer_hours_msg">""
As a member who has attended one or more events during the semester, your service hours will be documented. Please contact our secretary if you have any questions regarding your volunteer hours.
"</string>
    <string name="eboard">"
2012-2013 Executive Board"</string>
    <string name="eboard_msg">"
President
Nicole Safran  
nsafran1@binghamton.edu

Vice President
Sofia Saniz     
ssaniz1@binghamton.edu

Treasurer
Theresa Ehrich  
tehrich1@binghamton.edu

Secretary
Danielle Coneley 
dconley3@binghamton.edu

Communications
Janet Tenenboym 
jteneb2@binghamton.edu

Historian
Yang Hu (Declan) 
yhu11@binghamton.edu

Outreach/Development
Shalini Nagaraj 
snagara2@binghamton.edu

Newsletter Editor
Kimberly Go 
kgo1@binghamton.edu

Web/Social Media Coordinator
Megan Go 
mgo1@binghamton.edu

Event Coordinators
Samantha Birk 
sbirk1@binghamton.edu

Liuming Chen 
lchen13@binghamton.edu

Samantha Lowenkron 
slowenk1@binghamton.edu

Ronald Miller 
rmiller4@binghamton.edu

Johnny Sun 
jsun18@binghamton.edu."</string>
    <string name="title_activity_display_events_message">DisplayEventsMessageActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>